# django-zenslackchat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.rst  docker-compose.yml  example.env  manage.py  manifest.yml  pyproject.toml  pytest.ini  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  setup.py
.circleci/: config.yml
.copilot/: config.yml  image_build_run.sh
.devcontainer/: db.env  devcontainer.json  on-create.sh
.github/workflows/: codeql-analysis.yml
tests/: conftest.py  test_bot_reports.py  test_emoji_bug.py  test_eventsview.py  test_message_handling.py  test_message_tools.py  test_models.py  test_oauth_views.py  test_slackapi.py  test_slackutils.py  test_zendesk_comments_to_slack.py  test_zendesk_email_to_slack.py  test_zendesk_to_slack_message.py  test_zendesk_to_slack_message_sync.py  test_zendeskapi.py  test_zendeskapy.py  test_zendeskwebhooks.py  test_zendeskwebhookview.py  test_zenslackchat_views.py
webapp/: celery.py  healthcheck.py  settings.py  urls.py  wsgi.py
zenslackchat/: admin.py  apps.py  atlassian_api.py  attlassian_api.py  botlogging.py  eventsview.py  goferbot.py  goferbot_rtmapi.py  main.py  message.py  message_tools.py  models.py  service.py  slack_api.py  slack_utils.py  urls.py  views.py  zendesk_api.py  zendesk_base_webhook.py  zendesk_comments_to_slack.py  zendesk_demo.py  zendesk_email_to_slack.py  zendesk_to_slack_comments.py  zendesk_webhook_view.py  zendesk_webhooks.py
zenslackchat/migrations/: 0001_initial.py  0002_auto_20200916_1500.py  (+8 more)
(+3 files in other folders)
